--- a/display.html
+++ b/display.html
@@ -8,23 +8,39 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 20px;
-      background: #f9f9f9;
-      color: #333;
+    :root {
+      --primary-color: #007BFF;
+      --light-gray: #f2f2f2;
+      --background-gradient: linear-gradient(135deg, #e0eafc, #cfdef3);
     }
 
-    h1,
-    h2,
-    h3 {
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: var(--background-gradient);
       color: #333;
-      text-align: center;
     }
 
     .container {
       max-width: 1200px;
-      margin: auto;
+      margin: 20px auto;
+      background: #fff;
+      padding: 20px 40px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    header {
+      border-bottom: 2px solid var(--primary-color);
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+      color: var(--primary-color);
     }
 
     .search-box {
@@ -39,6 +55,12 @@
       max-width: 400px;
       border: 1px solid #ccc;
       border-radius: 4px;
+      transition: border-color 0.3s ease;
+    }
+
+    input#searchInput:focus {
+      outline: none;
+      border-color: var(--primary-color);
     }
 
     table {
@@ -57,13 +79,21 @@
     }
 
     th {
-      background-color: #f2f2f2;
+      background-color: var(--light-gray);
       font-weight: 700;
+    }
+
+    table tr:nth-child(even) {
+      background: #fafafa;
+    }
+
+    table tr:hover {
+      background: #f1f1f1;
     }
 
     .pagination {
       text-align: center;
-      margin: 10px 0;
+      margin: 10px 0 20px;
     }
 
     .pagination button {
@@ -71,10 +101,15 @@
       margin: 0 5px;
       font-size: 1em;
       border: none;
-      background-color: #007BFF;
+      background-color: var(--primary-color);
       color: white;
       border-radius: 4px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .pagination button:hover:not(:disabled) {
+      background-color: #0056b3;
     }
 
     .pagination button:disabled {
@@ -88,8 +123,8 @@
       max-width: 90vw;
       background: #fff;
       padding: 20px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 4px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
 
     @media (min-width: 768px) {
@@ -98,7 +133,7 @@
       }
     }
 
-    /* Force the canvas to have a fixed height to prevent it from growing indefinitely */
+    /* Force the canvas to have a fixed height */
     .chart-container canvas {
       display: block;
       width: 100% !important;
@@ -124,7 +159,9 @@
 
 <body>
   <div class="container">
-    <h1>ActiveSG Capacities Dashboard</h1>
+    <header>
+      <h1>ActiveSG Capacities Dashboard</h1>
+    </header>
 
     <!-- Search filter -->
     <div class="search-box">
@@ -354,9 +391,10 @@
             fill: false,
             borderWidth: 2,
             spanGaps: true,
-            // Increase point hit radius for better interactivity.
             pointHitRadius: 10,
-            pointHoverRadius: 6
+            pointHoverRadius: 6,
+            // Optionally add a slight tension for smoother curves:
+            tension: 0.2
           });
         });
 
