Add opengraph tags

--- a/display.html
+++ b/display.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <title>ActiveSG Capacities Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Open Graph / Facebook / Telegram -->
+  <meta property="og:title" content="ActiveSG Capacities Dashboard" />
+  <meta property="og:description"
+    content="Monitor real-time and historical capacities of ActiveSG gyms and pools with an interactive dashboard." />
+  <!-- <meta property="og:image" content="https://yourdomain.com/path/to/preview-image.png" /> -->
+  <meta property="og:url" content="https://sriramsami.com/activesg/" />
+  <meta property="og:type" content="website" />
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <style>
