--- a/teaching.html
+++ b/teaching.html
@@ -6,16 +6,19 @@ title: Teaching
 ---
 <h3> Overview </h3>
 <section>
-	Since 2024, I am an Instructor at the National University of Singapore's Computer Science Department, while awaiting my PhD defense.
+	I am a Lecturer at the National University of Singapore's Computer Science Department.
 </section>
 
-<br/>
+<br />
 
 <section>
-	Before, I was a <a href="https://www.comp.nus.edu.sg/programmes/pg/tutorship/"><strong>Graduate Tutor</strong></a> (and concurrently, a PhD student).
-	<br/>
-	<br/>
-	Before that, I was an undergraduate TA, and I had such a good experience that I decided to pursue teaching :) <br/> <br/>
+	Before, I was a <a href="https://www.comp.nus.edu.sg/programmes/pg/tutorship/"><strong>Graduate Tutor</strong></a>
+	(and concurrently, a PhD student).
+	<br />
+	<br />
+	Before even that, I was an undergraduate TA, and I had such a good experience that I decided to pursue teaching :)
+	<br />
+	<br />
 
 	I focus primarily on (and have taught) <em> systems </em> courses such as:
 	<ul>
@@ -36,7 +39,8 @@ title: Teaching
 		<li> <strong> CG2111A: Engineering Principles and Practice II </strong> </li>
 	</ul>
 
-	These focuses are in line with my <a href="/research/">research</a> on sensors (a signals, systems, and hardware/electronics-heavy area) and their security implications.
+	These focuses are in line with my <a href="/research/">research</a> on sensors (a signals, systems, and
+	hardware/electronics-heavy area) and their security implications.
 
 </section>
 
@@ -55,10 +59,10 @@ title: Teaching
 </section>
 
 
-	<!-- <h3> Teaching Ratings </h3> -->
+<!-- <h3> Teaching Ratings </h3> -->
 
-	<!-- Nicely formatted table with columns: Module, Year & Semester, Teaching Rating, and Department Average-->
-	<!-- <table>
+<!-- Nicely formatted table with columns: Module, Year & Semester, Teaching Rating, and Department Average-->
+<!-- <table>
 		<tr>
 			<th> Module </th>
 			<th> Year & Semester </th>
@@ -115,4 +119,4 @@ title: Teaching
 		</tr>
 	</table> -->
 
-	<!-- <img src="/assets/ratings.svg"></img> -->
+<!-- <img src="/assets/ratings.svg"></img> -->
