Update homepage with TKR + teaching page reorg

--- a/teaching.html
+++ b/teaching.html
@@ -12,32 +12,33 @@ title: Teaching
 <br />
 
 <section>
-	Before, I was a <a href="https://www.comp.nus.edu.sg/programmes/pg/tutorship/"><strong>Graduate Tutor</strong></a>
-	(and concurrently, a PhD student).
+	Before, I was a <a href="https://www.comp.nus.edu.sg/programmes/pg/tutorship/"><strong>Graduate Tutor</strong></a> (a full-time teaching role) for more than five years while pursuing my PhD. 
 	<br />
 	<br />
-	Before even that, I was an undergraduate TA, and I had such a good experience that I decided to pursue teaching :)
+	Before even that, I was an undergraduate teaching assistant, and I had such a good experience that I decided to pursue teaching as a career :)
 	<br />
 	<br />
 
-	I focus primarily on (and have taught) <em> systems </em> courses such as:
+
+<h3> Courses </h3>
+
+	In the Computer Science department, I focus on <em> systems and high-performance computing </em> courses such as:
 	<ul>
 		<li> <strong> CS2106: Introduction to Operating Systems </strong> </li>
 		<li> <strong> CS3210: Parallel Computing </strong> </li>
 		<li> <strong> CS3211: Parallel and Concurrent Programming </strong> </li>
 	</ul>
 
-	However I have also taught <em> security </em> courses in the past, such as:
-
+	I also teach <em> introductory Computer Engineering </em> courses, such as:
 	<ul>
-		<li> <strong> CS2107: Introduction to Information Security </strong> </li>
+		<li> <strong> CS1010: Programming Methodology </strong> (using the C programming language) </li>
+		<li> <strong> CG1111A: Engineering Principles and Practice I </strong> (building and understanding fundamental electronic circuits) </li>
+		<li> <strong> CG2111A: Engineering Principles and Practice II </strong> (microcontroller programming and end-to-end system implementation)</li>
 	</ul>
 
-	Now, I also teach <em> introductory Computer Engineering </em> courses, such as:
-	<ul>
-		<li> <strong> CG1111A: Engineering Principles and Practice I </strong> </li>
-		<li> <strong> CG2111A: Engineering Principles and Practice II </strong> </li>
-	</ul>
+	However I have also taught <em> security </em> courses in the past, such as <strong> CS2107: Introduction to Information Security </strong>
+    <br /> <br />
+
 
 	These focuses are in line with my <a href="/research/">research</a> on sensors (a signals, systems, and
 	hardware/electronics-heavy area) and their security implications.
